--- a/Exam2/Vagrantfile
+++ b/Exam2/Vagrantfile
@@ -17,6 +17,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       end
       vb.customize ['storageattach', :id,  '--storagectl', 'IDE', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', firstDisk]
     end
+     master.vm.provision "ansible" do |ansible|
+       ansible.inventory_path = 'hosts'
+       ansible.playbook = "docker_playbook.yml"
+    end
   end
 
    config.vm.define :worker_1 do |n1|
@@ -29,6 +33,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
        end
        vb.customize ['storageattach', :id,  '--storagectl', 'IDE', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', secondDisk]
      end
+     n1.vm.provision "ansible" do |ansible|
+       ansible.inventory_path = 'hosts'
+       ansible.playbook = "docker_playbook.yml"
+      end
    end
  
    config.vm.define :worker_2 do |n2|
@@ -41,22 +49,25 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
        end
        vb.customize ['storageattach', :id,  '--storagectl', 'IDE', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', thirdDisk]
      end
+     n2.vm.provision "ansible" do |ansible|
+       ansible.inventory_path = 'hosts'
+       ansible.playbook = "docker_playbook.yml"
+      end
    end
  
    config.vm.define :worker_3 do |n3|
      n3.vm.box = "centos/7"
      n3.vm.network :private_network, ip: "192.168.56.104"
      n3.vm.provider :virtualbox do |vb|
-       vb.customize ["modifyvm", :id, "--memory", "1024","--cpus", "1", "--name", "worker_3b" ]
+       vb.customize ["modifyvm", :id, "--memory", "1024","--cpus", "1", "--name", "worker_3" ]
        unless File.exist?(fourthDisk)
          vb.customize ['createhd', '--filename', fourthDisk, '--variant', 'Fixed', '--size', 5 * 1024]
        end
        vb.customize ['storageattach', :id,  '--storagectl', 'IDE', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', fourthDisk]
      end
+     n3.vm.provision "ansible" do |ansible|
+       ansible.inventory_path = 'hosts'
+       ansible.playbook = "docker_playbook.yml"
+      end
    end
-
-   config.vm.provision "ansible" do |ansible|
-     ansible.inventory_path = 'hosts'
-     ansible.playbook = "config.yml"
-  end
 end
