contenedor con app

--- a/contenedorApp1/compose/aplicacion/Dockerfile
+++ b/contenedorApp1/compose/aplicacion/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu:14.04
+FROM fluent/fluentd:v1.2.6-debian
 MAINTAINER Your Name <jonathan.arias@correo.icesi.edu.co>
 
 ENV HOME /root
@@ -7,6 +8,8 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get -yqq update
 RUN apt-get install -yqq python python-dev python-pip
 RUN pip install pyramid
+RUN apt update -y && apt install vim -y
+RUN ["gem", "install", "fluent-plugin-elasticsearch", "--no-rdoc", "--no-ri", "--version", "2.12.0"]
 
 WORKDIR /code
 CMD ["python", "app.py"]
