--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,40 @@ services:
       - ./db:/docker-entrypoint-initdb.d/:ro
     mem_limit: 20m
 
+  web:
+    image: httpd
+    ports:
+      - "8088:80"
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: httpd.access
+
+  fluentd:
+    build: ./fluentd
+    volumes:
+      - ./fluentd/conf:/fluentd/etc
+    ports:
+      - "24224:24224"
+      - "24224:24224/udp"
+
+  elasticsearch:
+    image: elastic/elasticsearch:6.4.3
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    expose:
+      - 9200
+    ports:
+      - "9200:9200"
+
+  kibana:
+    image: elastic/kibana:6.4.3
+    ports:
+      - "5601:5601"
+  
+
