--- a/Exam2/gluster_playbook.yml
+++ b/Exam2/gluster_playbook.yml
@@ -1,30 +1,33 @@
 - hosts: docker-manager
   become: yes
-  become_user: vagrant
-  become_method: sudo 
   tasks:
-          - name: init gluster
-            shell: |
-                    sudo gluster peer probe node1
-                    sudo gluster peer probe node2
-                    sudo gluster peer probe node3
-                    sudo gluster volume create swarm-vols replica 4 node0:/gluster/data node1:/gluster/data node2:/gluster/data node3:/gluster/data force
-                    sudo gluster volume set swarm-vols auth.allow 127.0.0.1
-                    sudo gluster volume start swarm-vols
+          - name: node1
+            shell: gluster peer probe node1
+            ignore_errors: yes
+
+          - name: node2
+            shell: gluster peer probe node2
+            ignore_errors: yes
+
+          - name: node3
+            shell: gluster peer probe node3
             ignore_errors: yes
 
           - name: gluster volume
-            shell: sudo mount.glusterfs localhost:/swarm-vols /swarm/volumes
+            shell: gluster volume create swarm-vols replica 4 node0:/gluster/data node1:/gluster/data node2:/gluster/data node3:/gluster/data force
             ignore_errors: yes
 
+          - name: set swarm-vols
+            shell: gluster volume set swarm-vols auth.allow 127.0.0.1
+            ignore_errors: yes
 
-- hosts: docker-worker
+          - name: start swarm-vols
+            shell: gluster volume start swarm-vols
+            ignore_errors: yes
+
+- hosts: docker-manager docker-worker
   become: yes
-  become_user: vagrant
-  become_method: sudo
-  vars:
-          docker_swarm_manager_ip: "192.168.56.101"
   tasks:
           - name: gluster volume
-            shell: sudo mount.glusterfs localhost:/swarm-vols /swarm/volumes
+            shell: mount.glusterfs localhost:/swarm-vols /swarm/volumes
             ignore_errors: yes
